added navbar and createed page components

--- a/React3/box-office/.eslintrc
+++ b/React3/box-office/.eslintrc
@@ -4,18 +4,14 @@
     "env": {
       "browser": true
     },
-    "parser": "@babel/eslint-parser",
+    "parser": "babel-eslint",
     "parserOptions": {
-        "ecmaVersion": "latest",
         "requireConfigFile": false,
-        "sourceType": "module",
-      //   "babelOptions": {
-      //     "presets": ["@babel/preset-react"]
-      //  },
-        "ecmaFeatures": {
-            "jsx": true
-            }
-        },
+        "sourceType": "module"
+        // "babelOptions": {
+        //   "presets": ["@babel/preset-react"]
+        // }
+      },
             
     "rules": {
       "no-plusplus": [0],
