--- a/React3/box-office/package.json
+++ b/React3/box-office/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "babel-install": "^2.1.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router": "^5.2.0",
@@ -54,8 +55,9 @@
     ]
   },
   "devDependencies": {
-    "@babel/eslint-parser": "^7.5.4",
     "@babel/preset-react": "^7.17.12",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.32.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
