--- a/React3/box-office/package.json
+++ b/React3/box-office/package.json
@@ -9,6 +9,7 @@
     "babel-install": "^2.1.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-fade-in": "^2.0.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
